facebook logo + minor fixes

--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
 
     <!-- https://unsplash.com/license -->
 
+    <!-- 
+        1. Make Logo FOR FACEBOOK 
+        2. Add grenery iunstead of mop
+
+    -->
+
     <!--Page Title-->
-    <title>Kottie's Cleaning</title>
+    <title>Kotties Cleaning</title>
 
     <!--Meta Keywords and Description-->
     <meta name="keywords" content="">
@@ -129,10 +135,8 @@
 
                 <div class="section-heading">
                     <h1>KOTTIES CLEANING</h1>
-                    <h2>Elevating Sydney homes with impeccable cleaning services.</h2>
+                    <h2>Elevating homes with Sydney's most trusted cleaning service.</h2>
                     <div class="main-trading">
-                        <p class="main-top"><b>Trading Hours:</b></p>
-                        <p class="main-bottom">Mon-Fri 8:30am - 5:00pm</p>
                     </div>
                 </div>
 
@@ -238,8 +242,8 @@
                 <div class="col-3">
                     <!--User Testimonial-->
                     <blockquote class="testimonial text-right bigtest">
-                        <q>Kotties Cleaning has been a game-changer for me as a busy homeowner in Sydney.</q>
-                        <footer>— John Doe, Happy Customer</footer>
+                        <q>Kotties cleaning has been a game changer for me managing work schedule, family commitments and extra curricula activities</q>
+                        <footer>— Deborah G</footer>
                     </blockquote>
                     <!-- End of Testimonial-->
 
@@ -251,22 +255,22 @@
                     <div class="section-heading">
                         <h3>ABOUT US</h3>
                         <h2 class="section-title">Focusing On What Matters Most</h2>
-                        <p class="section-subtitle">At Kotties Cleaning, we're the Sydney's trusted choice for residential cleaning. Our experienced team is dedicated to transforming your living space into a haven of cleanliness and comfort. We understand the unique needs of Northern Beaches homeowners and deliver tailored cleaning solutions that go beyond the ordinary.</p>
+                        <p class="section-subtitle">At Kotties Cleaning, we're Sydney's trusted choice for residential cleaning. Our experienced team is dedicated to transforming your living space into a haven of cleanliness and comfort. We understand the unique needs of Northern Shore homeowners and deliver tailored cleaning solutions that go beyond the ordinary.</p>
                     </div>
-                    <p>What sets us apart is our unwavering attention to detail. We use eco-friendly products and advanced techniques to ensure thorough yet gentle cleaning. Each visit from our team is a step toward maintaining your home's beauty and hygiene, allowing you to enjoy your Sydney lifestyle without the cleaning hassle.
+                    <p>What sets us apart is our unwavering attention to detail. Each visit from our team ensures your home's beauty and hygiene is maintained, allowing you to enjoy your busy lifestyle without the cleaning hassle.
                     </p>
                     <p>
-                        Choose Kotties Cleaning for peace of mind. We're licensed, insured, and focused on North Shore excellence. Our punctuality, efficiency, and eco-friendly practices are second to none. Your satisfaction is our priority, and we're here to make your home cleaner and more vibrant.
+                        Choose Kotties Cleaning for peace of mind. We're licensed, insured, and focused on North Shore excellence. Our punctuality, efficiency, and proven results are second to none. Your satisfaction is our priority, and we're here to make your home cleaner and more vibrant.
                     <br>
                     &nbsp;
                     <br>
                     &nbsp;
                     <br>
                     </p>
-                    <!-- Just replace the Video ID "UYJ5IjBRlW8" with the ID of your video on YouTube (Found within the URL) -->
+                    <!-- Just replace the Video ID "UYJ5IjBRlW8" with the ID of your video on YouTube (Found within the URL)
                     <a href="#" data-videoid="UYJ5IjBRlW8" data-videosite="youtube" class="button video link-lightbox">
                         WATCH VIDEO <i class="fa fa-play" aria-hidden="true"></i>
-                    </a>
+                    </a> -->
                 </div>
                 <!--End Content Right Side-->
 
@@ -292,7 +296,7 @@
 
                 <!--User Testimonial-->
                 <blockquote class="col-3 testimonial classic">
-                    <img src="images/user-images/user-1.jpg" alt="User"/>
+                    <!-- <img src="images/user-images/user-1.jpg" alt="User"/> -->
                     <q>Kotties Cleaning has been a game-changer for me as a busy homeowner on the Upper North Shore. Their attention to detail is unmatched, and every time they clean, it feels like I'm coming back to a brand new home. I highly recommend their services!</q>
                     <footer>John Doe - Happy Customer</footer>
                 </blockquote>
@@ -300,7 +304,7 @@
 
                 <!--User Testimonial-->
                 <blockquote class="col-3 testimonial classic">
-                    <img src="images/user-images/user-2.jpg" alt="User"/>
+                    <!-- <img src="images/user-images/user-2.jpg" alt="User"/> -->
                     <q>I've tried several cleaning services in the area, but Kotties Cleaning stands out. They're not just about cleaning; they're about transforming your living space. It's incredible how they consistently exceed my expectations. My home has never looked better!</q>
                     <footer>Roslyn Doe - Happy Customer</footer>
                 </blockquote>
@@ -308,7 +312,7 @@
 
                 <!--User Testimonial-->
                 <blockquote class="col-3 testimonial classic">
-                    <img src="images/user-images/user-3.jpg" alt="User"/>
+                    <!-- <img src="images/user-images/user-3.jpg" alt="User"/> -->
                     <q>Kotties Cleaning is the go-to choice for homeowners. Their team is professional, friendly, and their work is outstanding. They pay attention to even the smallest details, and it's evident in the sparkling results. I couldn't be happier with their service.</q>
                     <footer>Thomas Doe - Happy Customer</footer>
                 </blockquote>
@@ -337,7 +341,7 @@
                             -->
                             <p class="pricing-sub">For All Homes</p>
                             <div class="pricing">
-                                <div class="price">General Clean</div>
+                                <div class="price">Standard Clean</div>
                                 <p class="black pdt1">Cleaning to revitalise your home.</p>
                             </div>
                             <div class="service-boxes" style="display: flex; flex-wrap: wrap; width: 100%; background-color: white;">
@@ -480,7 +484,7 @@
                                 <div class="col-2 icon-block icon-top in-price-block" data-wow-delay="0.1s">
                                     <!--Icon-->
                                     <div class="icon">
-                                        <i class="fa fa-calendar fa-3x"></i>
+                                        <i class="fa fa-window-maximize fa-3x"></i>
                                     </div>
                                     <!--Icon Block Description-->
                                     <div class="icon-block-description">
@@ -600,7 +604,7 @@
             </div>
             <div class="accordion-item-body">
             <div class="accordion-item-body-content">
-                Booking our services is easy! Simply visit our website and click on the "Book Now" button. Follow the prompts to select your service type, preferred date and time, and provide your contact information. It takes less than a minute to secure your appointment.
+                Booking our services is easy! Simply call +61 0422 695 551 to book a quote. Select your service type, preferred date and time, and provide your contact information. It takes less than a minute to secure your appointment.
             </div>
             </div>
         </div>
@@ -620,7 +624,7 @@
             </div>
             <div class="accordion-item-body">
             <div class="accordion-item-body-content">
-                Yes, all our cleaning professionals are highly trained and fully insured for your peace of mind. We prioritize the safety and security of both our clients and our team members.
+                Yes, all our cleaning professionals are highly trained, fully insured and have undergone police checks for your peace of mind. We prioritize the safety and security of both our clients and our team members.
                 <!--
                 <ul style="padding-left: 1rem;">
                 <li>HTML, CSS, JavaScript</li>
@@ -644,7 +648,7 @@
             </div>
             <div class="accordion-item-body">
             <div class="accordion-item-body-content">
-                Our spring cleaning service is a comprehensive, top-to-bottom deep clean of your space. We focus on areas that may not receive regular attention, such as baseboards, ceiling fans, and behind appliances. It's designed to refresh and revitalize your home, leaving it spotless and rejuvenated.
+                Our Deep cleaning service is a comprehensive, top-to-bottom deep clean of your space. We focus on areas that may not receive regular attention, such as baseboards, ceiling fans, and behind appliances. It's designed to refresh and revitalize your home, leaving it spotless and rejuvenated.
             </div>
             </div>
         </div>
@@ -666,9 +670,9 @@
 
     <!--Footer-->
     <footer id="landing-footer" class="clearfix">
-        <div class="row clearfix">
+        <div class="row clearfix bottom-nav">
 
-            <p id="copyright" class="col-2">&#169 Kotties Cleaning 2023 &nbsp; - &nbsp; Made by <a href="https://shapingrain.com/">Shaping Rain</a> / <a href="#">Peter Y</a></p>
+            <p id="copyright" class="col-2">Trading Hours: Mon-Fri 8:30am - 5:00pm<br>&#169 Kotties Cleaning 2023 &nbsp; - &nbsp; Made by <a href="https://shapingrain.com/">Shaping Rain</a> / <a href="#">Peter Y</a></p>
 
             <!--Social Icons in Footer-->
             <ul class="col-2 social-icons">
