fixed home screen

--- a/index.html
+++ b/index.html
@@ -135,10 +135,6 @@
                 <div class="section-heading">
                     <h1>KOTTIES CLEANING</h1>
                     <h2>Elevating homes with Sydney's most trusted cleaning service.</h2>
-                    <div class="main-trading">
-                        <p class="main-top"><b>Trading Hours:</b></p>
-                        <p class="main-bottom">Mon-Fri 8:30am - 5:00pm</p>
-                    </div>
                 </div>
 
                 <!--Call to Action-->
@@ -172,7 +168,7 @@
                     <!--Icon Block-->
                     <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.1s">
                         <!--Icon-->
-                        <div class="icon">
+                        <div class="icon step-icon">
                             <i class="fa fa-phone fa-3x"></i>
                         </div>
                         <!--Icon Block Description-->
@@ -186,7 +182,7 @@
                     <!--Icon Block-->
                     <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.3s">
                         <!--Icon-->
-                        <div class="icon">
+                        <div class="icon step-icon">
                             <i class="fa fa-shower fa-3x"></i>
                         </div>
                         <!--Icon Block Description-->
@@ -200,7 +196,7 @@
                     <!--Icon Block-->
                     <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.5s">
                         <!--Icon-->
-                        <div class="icon">
+                        <div class="icon step-icon">
                             <i class="fa fa-glass fa-3x"></i>
                         </div>
                         <!--Icon Block Description-->
@@ -326,7 +322,7 @@
 
                 <div class="pricing-blocks-section">
                     <!--Pricing Block-->
-                    <div class="pricing-block wow fadeInUp pdt1" data-wow-delay="0.0s">
+                    <div class="pricing-block fadeInUp pdt1" data-wow-delay="0.0s">
                         <div class="pricing-block-content">
                             <!--
                             <h3>Move Out / Spring Clean</h3>
@@ -394,7 +390,7 @@
                                 <div class="pricing-sub" style="color: #999; margin-bottom: 0px;"><b>Optional Extras</b> - Add extras and customise your cleaning service to meet your needs.</div>
                             </div>
                             <ul>
-                                <li>Oven Cleaning, Fridge Cleaning, Changing Bedsheets, Window Cleaning, Shutters Cleaning, Skirting Cleaning, Wall Cleaning, Balcony/Patio Cleaning, Garage Cleaning</li>
+                                <li>Oven Cleaning, Fridge Cleaning, Changing Bedsheets, Window Cleaning, Shutters Cleaning, Skirting Cleaning, Wall Cleaning, Balcony/Patio Cleaning and Garage Cleaning.</li>
                                 <!--
                                 <li>Fridge Cleaning</li>
                                 <li>Changing Bedsheets</li>
@@ -410,7 +406,7 @@
                     </div>
                     <!--End Pricing Block-->
                     <!--Pricing Block-->
-                    <div class="pricing-block wow fadeInUp pdt1" style="margin-top: 1rem;" data-wow-delay="0.0s">
+                    <div class="pricing-block fadeInUp pdt1" style="margin-top: 1rem;" data-wow-delay="0.0s">
                         <div class="pricing-block-content">
                             <!--
                             <h3>Move Out / Spring Clean</h3>
