fixed quote centering on tablets

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                                 <a href="#testimonials">Testimonials</a>
                             </li>
                             <li>
-                                <a href="#pricing">Pricing</a>
+                                <a href="#pricing">Packages</a>
                             </li>
                         </ul>
                     </nav>
@@ -279,31 +279,35 @@
 
         <!--Testimonials-->
         <aside id="testimonials" class="scrollto text-center" data-enllax-ratio=".2">
-            <div class="row clearfix">
+            <div class="row clearfix reviews">
 
                 <div class="section-heading">
                     <h3>FEEDBACK</h3>
                     <h2 class="section-title">What our customers are saying</h2>
                 </div>
 
-                <blockquote class="col-3 testimonial classic" id="review1" style="transform: scale(0.9);">
-                    <q>Kotties Cleaning has been a game-changer for me as a busy homeowner on the Upper North Shore. Their attention to detail is unmatched, and every time they clean, it feels like I'm coming back to a brand new home. I highly recommend their services!</q>
-                    <footer>John Doe - Happy Customer</footer>
-                </blockquote>
+                <div id="quotes-block">
+                    <div id="quotes" class="quotes">
+                        <blockquote class="col-3 testimonial classic" id="review1" style="transform: scale(0.9);">
+                            <q>Kotties Cleaning has been a game-changer for me as a busy homeowner on the Upper North Shore. Their attention to detail is unmatched, and every time they clean, it feels like I'm coming back to a brand new home. I highly recommend their services!</q>
+                            <footer>John Doe - Happy Customer</footer>
+                        </blockquote>
 
-                <blockquote class="col-3 testimonial classic phone-dissapear" id="review2" style="transform: scale(1.1);">
-                    <q>I've tried several cleaning services in the area, but Kotties Cleaning stands out. They're not just about cleaning; they're about transforming your living space. It's incredible how they consistently exceed my expectations. My home has never looked better!</q>
-                    <footer>Roslyn Doe - Happy Customer</footer>
-                </blockquote>
+                        <blockquote class="col-3 testimonial classic phone-dissapear" id="review2" style="transform: scale(1.1);">
+                            <q>I've tried several cleaning services in the area, but Kotties Cleaning stands out. They're not just about cleaning; they're about transforming your living space. It's incredible how they consistently exceed my expectations. My home has never looked better!</q>
+                            <footer>Roslyn Doe - Happy Customer</footer>
+                        </blockquote>
 
-                <blockquote class="col-3 testimonial classic phone-dissapear" id="review3" style="transform: scale(0.9);">
-                    <q>Kotties Cleaning is the go-to choice for homeowners. Their team is professional, friendly, and their work is outstanding. They pay attention to even the smallest details, and it's evident in the sparkling results. I couldn't be happier with their service.</q>
-                    <footer>Thomas Doe - Happy Customer</footer>
-                </blockquote>
+                        <blockquote class="col-3 testimonial classic phone-dissapear" id="review3" style="transform: scale(0.9);">
+                            <q>Kotties Cleaning is the go-to choice for homeowners. Their team is professional, friendly, and their work is outstanding. They pay attention to even the smallest details, and it's evident in the sparkling results. I couldn't be happier with their service.</q>
+                            <footer>Thomas Doe - Happy Customer</footer>
+                        </blockquote>
+                    </div>
 
-                <div class="review-arrows">
-                    <div class="review-arrow review-arrow-left" onclick="javascript:changeReviews(1)"><</div>
-                    <div class="review-arrow review-arrow-right" onclick="javascript:changeReviews(-1)">></div>
+                    <div class="review-arrows">
+                        <div class="review-arrow review-arrow-left" onclick="javascript:changeReviews(1)"><</div>
+                        <div class="review-arrow review-arrow-right" onclick="javascript:changeReviews(-1)">></div>
+                    </div>
                 </div>
 
             </div>
