added google analytics g-tag

--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
 
     <!-- https://unsplash.com/license -->
 
+    <!-- Google tag (gtag.js) -->
+    <!-- For google analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1ZCRT74LVL"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-1ZCRT74LVL');
+    </script>
+
     <!--Page Title-->
     <title>Kotties Cleaning</title>
 
