--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
 
-    <!-- https://unsplash.com/license -->
+    <!-- House Pictures From: https://unsplash.com/license -->
 
     <!-- Google tag (gtag.js) -->
     <!-- For google analytics -->
@@ -18,9 +18,6 @@
 
     <!--Page Title-->
     <title>Kotties Cleaning</title>
-
-    <!-- Bootstrap -->
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"> -->
 
     <!--Meta Keywords and Description-->
     <meta name="keywords" content="">
@@ -47,8 +44,6 @@
 
     <!--Google Webfonts-->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
-
-    
 </head>
 <body>
 
@@ -670,30 +665,21 @@
     </div>
     <!-- End of FAQs Area -->
 
-
-
     <!--Footer-->
     <footer id="landing-footer" class="clearfix">
         <div class="row clearfix">
 
-            <p id="copyright" class="col-2">&#169 Kotties Cleaning 2023 &nbsp; - &nbsp; Made by <a href="https://shapingrain.com/">Shaping Rain</a> / <a href="#">Peter Y</a></p>
+            <p id="copyright" class="col-2">&#169 Kotties Cleaning 2023 &nbsp; - &nbsp; Made by <a href="https://shapingrain.com/">Shaping Rain</a> / <a href="https://github.com/PYastreboff/">Peter Y</a></p>
 
             <!--Social Icons in Footer-->
             <ul class="col-2 social-icons">
-                <!--
-                <li>
-                    <a target="_blank" title="Facebook" href="#">
-                        <i class="fa fa-facebook fa-1x"></i><span>Facebook</span>
-                    </a>
-                </li>
-                -->
                 <li>
                     <a target="_blank" title="Twitter" href="#">
                         <i class="fa fa-twitter fa-1x"></i><span>Twitter</span>
                     </a>
                 </li>
                 <li>
-                    <a target="_blank" title="Instagram" href="#">
+                    <a target="_blank" title="Instagram" href="https://www.instagram.com/kottiescleaning/?igshid=MzRlODBiNWFlZA%3D%3D">
                         <i class="fa fa-instagram fa-1x"></i><span>Instagram</span>
                     </a>
                 </li>
