fixed spelling mistakes

--- a/index.html
+++ b/index.html
@@ -258,12 +258,12 @@
                     <div class="section-heading">
                         <h3>ABOUT US</h3>
                         <h2 class="section-title">Focusing On What Matters Most</h2>
-                        <p class="section-subtitle">At Kotties Cleaning, we're Sydney's trusted choice for residential cleaning. Our experienced team is dedicated to transforming your living space into a haven of cleanliness and comfort. We understand the unique needs of Northern Shore homeowners and deliver tailored cleaning solutions that go beyond the ordinary.</p>
+                        <p class="section-subtitle">At Kotties Cleaning, we're Sydney's trusted choice for residential cleaning. Our experienced team is dedicated to transforming your living space into a haven of cleanliness and comfort. We understand the unique needs of North Shore Homeowners and deliver tailored cleaning solutions that go beyond the ordinary.</p>
                     </div>
                     <p>What sets us apart is our unwavering attention to detail. Each visit from our team ensures your home's beauty and hygiene is maintained, allowing you to enjoy your busy lifestyle without the cleaning hassle.
                     </p>
                     <p>
-                        Choose Kotties Cleaning for peace of mind. We're licensed, insured, and focused on North Shore excellence. Our punctuality, efficiency, and proven results are second to none. Your satisfaction is our priority, and we're here to make your home cleaner and more vibrant.
+                        Choose Kotties Cleaning for peace of mind. Our punctuality, efficiency, and proven results are second to none. Your satisfaction is our priority, and we're here to make your home cleaner and more vibrant.
                     <br>
                     &nbsp;
                     <br>
@@ -391,7 +391,7 @@
                                     <!--Icon Block Description-->
                                     <div class="icon-block-description">
                                         <h4>Floors</h4>
-                                        <p>All floor spaces vacuumed and moped.</p>
+                                        <p>All floor spaces vacuumed and mopped.</p>
                                     </div>
                                 </div>
                                 <!--End of Icon Block-->
@@ -643,7 +643,7 @@
         </div>
         <div class="accordion-item">
             <div class="accordion-item-header">
-                What should I expect during a spring cleaning service?
+                What should I expect during a deep cleaning service?
             </div>
             <div class="accordion-item-body">
             <div class="accordion-item-body-content">
@@ -674,8 +674,8 @@
             <!--Social Icons in Footer-->
             <ul class="col-2 social-icons">
                 <li>
-                    <a target="_blank" title="Twitter" href="#">
-                        <i class="fa fa-twitter fa-1x"></i><span>Twitter</span>
+                    <a target="_blank" title="Facebook" href="#">
+                        <i class="fa fa-facebook fa-1x"></i><span>Facebook</span>
                     </a>
                 </li>
                 <li>
