--- a/index.html
+++ b/index.html
@@ -674,13 +674,18 @@
             <!--Social Icons in Footer-->
             <ul class="col-2 social-icons">
                 <li>
-                    <a target="_blank" title="Facebook" href="#">
+                    <a target="_blank" title="Facebook" href="https://www.facebook.com/profile.php?id=61553031301366&mibextid=ZbWKwL">
                         <i class="fa fa-facebook fa-1x"></i><span>Facebook</span>
                     </a>
                 </li>
                 <li>
                     <a target="_blank" title="Instagram" href="https://www.instagram.com/kottiescleaning/?igshid=MzRlODBiNWFlZA%3D%3D">
                         <i class="fa fa-instagram fa-1x"></i><span>Instagram</span>
+                    </a>
+                </li>
+                <li>
+                    <a target="_blank" title="Mail" href="mailto:kottiescleaning@gmail.com">
+                        <i class="fa fa-envelope fa-1x"></i><span>Mail</span>
                     </a>
                 </li>
             </ul>
